Small text updates.

--- a/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.tex
+++ b/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.tex
@@ -12,6 +12,9 @@
 
 \textbf{\LARGE Statistical Inference using RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Basic introduction to Rev \& MCMC}}\\\vspace{2mm}
+\vspace{1cm}
+{\Large Sebastian H{\"o}hna}
+\vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
