--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -4,6 +4,8 @@
 %\usepackage{color}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{longtable}
+\usepackage{colortbl}
+\usepackage[table]{xcolor}
 \usepackage{hanging}
 \usepackage{indentfirst}
 \usepackage{setspace}
